--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="chat.html">Chat</a> <!-- Enlace al chat -->
+                        </li>
                     </ul>
                 </div>
                 <div class="navbar align-self-center d-flex">
