se ajusto el link del nav para abrir el chat en otra ventana

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="chat.html">Chat</a> <!-- Enlace al chat -->
+                            <a class="nav-link" href="chat.html" target="_blank">Chat</a> <!-- Enlace al chat -->
                         </li>
                     </ul>
                 </div>
